--- a/static/localcheck.html
+++ b/static/localcheck.html
@@ -13,6 +13,7 @@
 
 <script type="module">
 import { parseAttestationObject } from "./parseAttestationObject.js";
+import { encodeHEX } from "./encodeHEX.js";
 
 export const registerCredential = async () => {
   const publicKey = {
